force-app/main/default/objects/Quote__c/fields/EPLI_M_A_Activity_Prior_2_Yrs_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_M_A_Activity_Prior_2_Yrs_Adj_New__c</fullName>
    <label>EPLI M&amp;A Activity [Prior 2 Yrs] (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>