force-app/main/default/objects/Quote__c/fields/EPLI_M_A_Activity_Prior_2_Yrs_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_M_A_Activity_Prior_2_Yrs_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. None	.90 - 1.0
B. Limited	1.0 - 1.1
C. Active M&amp;A	1.1 - 1.2</inlineHelpText>
    <label>EPLI M&amp;A Activity [Prior 2 Yrs] (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>