force-app/main/default/objects/Quote__c/fields/EPLI_Number_of_Years_In_Business_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Number_of_Years_In_Business_Adj__c</fullName>
    <formula>( EPLI_Base_Rate__c *  EPLI_Number_of_Years_In_Business_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Number of Years In Business (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>