force-app/main/default/objects/Quote__c/fields/EPLI_Number_of_Years_In_Business_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Number_of_Years_In_Business_Adj_New__c</fullName>
    <label>EPLI Number of Years In Business (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>