force-app/main/default/objects/Quote__c/fields/EPLI_Number_of_Years_In_Business_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Number_of_Years_In_Business_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Greater than 10 years	.85 - .90
B. 5 to 10 years .90 - 1.0
C. 2 to 5 years	1.0 - 1.15
D. Less than 2 years 1.15 - 1.35</inlineHelpText>
    <label>EPLI Number of Years In Business(Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>