force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Claims_Activity_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Claims_Activity_Adj__c</fullName>
    <formula>(  EPLI_Base_Rate__c *  EPLI_Prior_Claims_Activity_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Prior Claims Activity (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>