force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Claims_Activity_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Claims_Activity_Adj_New__c</fullName>
    <label>EPLI Prior Claims Activity (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>