force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Claims_Activity_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Claims_Activity_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. No claims in three years	.85 - 1.0
B. No history or minimal activity (payment within suggested retention and less than policy limits)	1.0 - 1.2
C. Significant activity (payment above suggested retention and above policy limits) 	1.2 - 1.5</inlineHelpText>
    <label>EPLI Prior Claims Activity (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>