force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Yr_Employee_Turnover_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Yr_Employee_Turnover_Adj__c</fullName>
    <formula>( EPLI_Base_Rate__c *  EPLI_Prior_Yr_Employee_Turnover_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Prior Yr Employee Turnover (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>