force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Yr_Employee_Turnover_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Yr_Employee_Turnover_Adj_New__c</fullName>
    <label>EPLI Prior Yr Employee Turnover (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>