force-app/main/default/objects/Quote__c/fields/EPLI_Prior_Yr_Employee_Turnover_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Prior_Yr_Employee_Turnover_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Average risk: relatively flat hiring or terminating year-over-year - .9 - 1.10
B. High risk: Rapid hiring (25% or more year-over-year growth) or ongoing layoffs - 1.1 - 1.5</inlineHelpText>
    <label>EPLI Prior Yr Employee Turnover (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>