force-app/main/default/objects/Quote__c/fields/EPLI_Profitability_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Profitability_Adj__c</fullName>
    <formula>(  EPLI_Base_Rate__c *  EPLI_Profitability_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Profitability (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>