force-app/main/default/objects/Quote__c/fields/EPLI_Profitability_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Profitability_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Achieved profitability in prior two years	.90 - 1.0
B. Did not achieve profitability in prior two years	1.0 - 1.1</inlineHelpText>
    <label>EPLI Profitability (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>