force-app/main/default/objects/Quote__c/fields/EPLI_Punitive_Damages_Covered_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Punitive_Damages_Covered_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. No	.90 - 1.0
B. Yes	1.0</inlineHelpText>
    <label>EPLI Punitive Damages Covered (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>