force-app/main/default/objects/Quote__c/fields/EPLI_Rate_Per_Million_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Rate_Per_Million_New__c</fullName>
    <label>EPLI Rate Per Million</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>