force-app/main/default/objects/Quote__c/fields/EPLI_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Rated_Premium__c</fullName>
    <label>EPLI Rated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>