force-app/main/default/objects/Quote__c/fields/EPLI_Rating_Factors__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Rating_Factors__c</fullName>
    <formula>(EPLI_Class_Of_Business_Factor__c + EPLI_Number_of_Years_In_Business_Factor__c + EPLI_Location_Factor__c + EPLI_Prior_Yr_Employee_Turnover_Factor__c + EPLI_M_A_Activity_Prior_2_Yrs_Factor__c + EPLI_At_Will_Statement_Factor__c + EPLI_Employee_Handbook_Factor__c + EPLI_Annual_Performance_Reviews_Factor__c + EPLI_Harassment_Training_Factor__c + EPLI_Full_Time_HR_Pro_Factor__c + EPLI_Profitability_Factor__c + EPLI_Debt_to_Equity_Factor__c + EPLI_Prior_Claims_Activity_Factor__c + EPLI_3rd_Party_Exposure_Factor__c + EPLI_Immigration_Violation_Factor__c + EPLI_Wage_Hour_Factor__c)/16</formula>
    <label>EPLI Rating Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>