force-app/main/default/objects/Quote__c/fields/EPLI_Retention_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Retention_Adjusted_Rate__c</fullName>
    <label>EPLI Retention Adjusted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>