force-app/main/default/objects/Quote__c/fields/EPLI_Retention_Modifier_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Retention_Modifier_Adj_New__c</fullName>
    <label>EPLI Retention Modifier (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>