force-app/main/default/objects/Quote__c/fields/EPLI_Retention_Modifier_Retention__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Retention_Modifier_Retention__c</fullName>
    <defaultValue>&quot;$25,000&quot;</defaultValue>
    <inlineHelpText>$10,000	1.400
$15,000	1.325
$20,000	1.200
$25,000	1.150
$35,000	1.050
$50,000	1.000
$75,000	0.975
$100,000	 0.950
$150,000	 0.925
$200,000	 0.905
$250,000	 0.900
$500,000	 0.875</inlineHelpText>
    <label>EPLI Retention Modifier (Retention)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$10,000</fullName>
            </value>
            <value>
                <fullName>$15,000</fullName>
            </value>
            <value>
                <fullName>$20,000</fullName>
            </value>
            <value>
                <fullName>$25,000</fullName>
                <default>true</default>
                <label>$25,000</label>
            </value>
            <value>
                <fullName>$35,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$75,000</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$150,000</fullName>
            </value>
            <value>
                <fullName>$200,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
            </value>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$5,000</fullName>
                <isActive>false</isActive>
                <label>$5,000</label>
            </value>
            <value>
                <fullName>$7,500</fullName>
                <isActive>false</isActive>
                <label>$7,500</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>