force-app/main/default/objects/Quote__c/fields/EPLI_Risk_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Risk_Adjusted_Rate__c</fullName>
    <label>EPLI Risk Adjusted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>