force-app/main/default/objects/Quote__c/fields/EPLI_Sublimit_for_Defense_Costs_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Sublimit_for_Defense_Costs_Adj__c</fullName>
    <formula>(  EPLI_Retention_Adjusted_Rate__c *  EPLI_Sublimit_for_Defense_Costs_Factor__c) - EPLI_Retention_Adjusted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Sublimit for Defense Costs (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>