force-app/main/default/objects/Quote__c/fields/EPLI_Sublimit_for_Defense_Costs_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Sublimit_for_Defense_Costs_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>No	1.0
Yes	1.15</inlineHelpText>
    <label>EPLI Sublimit for Defense Costs (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>