force-app/main/default/objects/Quote__c/fields/EPLI_Sublimit_for_Defense_Costs_Limit__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Sublimit_for_Defense_Costs_Limit__c</fullName>
    <defaultValue>&quot;$0&quot;</defaultValue>
    <label>EPLI Sublimit for Defense Costs (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0</fullName>
                <default>true</default>
                <label>$0</label>
            </value>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>