force-app/main/default/objects/Quote__c/fields/EPLI_Sublimit_for_Defense_Costs_Val__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Sublimit_for_Defense_Costs_Val__c</fullName>
    <formula>CASE(TEXT( EPLI_Sublimit_for_Defense_Costs_Limit__c),&quot;$0&quot;, 0, &quot;$500,000&quot;, 500000, &quot;$1,000,000&quot;, 1000000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Sublimit for Defense Costs (Val)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>