force-app/main/default/objects/Quote__c/fields/EPLI_Supplemental_Coverage_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Supplemental_Coverage_Adjusted_Rate__c</fullName>
    <label>EPLI Supplemental Coverage Adj Rate(Sep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>