force-app/main/default/objects/Quote__c/fields/EPLI_Wage__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Wage__c</fullName>
    <formula>CASE(TEXT( EPLI_Wage_Hour_Limit__c), &quot;$0&quot;, 0, &quot;$100,000&quot;, 100000, &quot;$125,000&quot;, 125000, &quot;$150,000&quot;, 150000, &quot;$200,000&quot;, 200000, &quot;$250,000&quot;, 250000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Wage &amp; Hour (Limit) Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>