force-app/main/default/objects/Quote__c/fields/EPLI_Wage_and_Hour_Retention__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Wage_and_Hour_Retention__c</fullName>
    <label>EPLI Wage and Hour (Retention)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$35,000</fullName>
                <default>true</default>
                <label>$35,000</label>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$75,000</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
            </value>
            <value>
                <fullName>$500,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>