force-app/main/default/objects/Quote__c/fields/EPLI_Wage_Hour_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Wage_Hour_Adj_New__c</fullName>
    <label>EPLI Wage &amp; Hour (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>