force-app/main/default/objects/Quote__c/fields/EPLI_Wage_Hour_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Wage_Hour_Factor__c</fullName>
    <defaultValue>1.05</defaultValue>
    <inlineHelpText>No	1.0
Yes	1.05 - 1.2</inlineHelpText>
    <label>EPLI Wage &amp; Hour (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>