force-app/main/default/objects/Quote__c/fields/EPLI_Wage_Hour_Limit__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Wage_Hour_Limit__c</fullName>
    <defaultValue>&quot;$250,000&quot;</defaultValue>
    <label>EPLI Wage &amp; Hour (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$150,000</fullName>
            </value>
            <value>
                <fullName>$200,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
                <default>true</default>
                <label>$250,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>