force-app/main/default/objects/Quote__c/fields/Equity_and_Debt_Structure_Adj__c.field-meta.xml
<CustomField>
    <fullName>Equity_and_Debt_Structure_Adj__c</fullName>
    <formula>( Equity_and_Debt_Structure_Factor__c * D_O_Base_Rate__c )- D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity and Debt Structure (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>