force-app/main/default/objects/Quote__c/fields/Equity_and_Debt_Structure_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Equity_and_Debt_Structure_Adj_New__c</fullName>
    <label>Equity and Debt Structure (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>