force-app/main/default/objects/Quote__c/fields/Equity_and_Debt_Structure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Equity_and_Debt_Structure_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Only operational debt and/or private convertible debt (including SAFE notes and similar instruments):	.90 - 1.0
B. Private debt, venture debt, loans, promissory notes, or other non-public debt:	1.0 - 1.2
C. Public debt:  	1.2 - 2.0</inlineHelpText>
    <label>Debt Structure (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>