force-app/main/default/objects/Quote__c/fields/Excess_Endorsement_1__c.field-meta.xml
<CustomField>
    <fullName>Excess_Endorsement_1__c</fullName>
    <label>Excess Endorsement 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Excess_Endorsements</valueSetName>
    </valueSet>
</CustomField>