force-app/main/default/objects/Quote__c/fields/Excess_Endorsement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Excess_Endorsement_Summary__c</fullName>
    <formula>TEXT( Excess_Endorsement_1__c ) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_2__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_3__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_4__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_5__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_6__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_7__c) &amp;&quot;; &quot;&amp; TEXT (Excess_Endorsement_8__c) &amp;&quot;; &quot;&amp; TEXT(Excess_Endorsement_9__c) &amp;&quot;; &quot;&amp; TEXT(Excess_Endorsement_10__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Endorsement Summary</label>
    <type>Text</type>
</CustomField>