force-app/main/default/objects/Quote__c/fields/FID_Limit_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>FID_Limit_Adjusted_Rate__c</fullName>
    <label>FID Limit Adjusted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>