force-app/main/default/objects/Quote__c/fields/FID_Limit_Modifier_Adj__c.field-meta.xml
<CustomField>
    <fullName>FID_Limit_Modifier_Adj__c</fullName>
    <formula>(    FID_Risk_Adjusted_Rate__c     *

IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$500,000&quot;), 0.85,
IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$1,000,000&quot;), 1.00,
IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$2,000,000&quot;), 1.65,
IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$3,000,000&quot;), 2.05,
IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$4,000,000&quot;), 2.45,
IF(  ISPICKVAL (FID_Limit_Modifier_Limit__c , &quot;$5,000,000&quot;), 2.80, 0 )))))))

- FID_Risk_Adjusted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FID Limit Modifier (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>