force-app/main/default/objects/Quote__c/fields/FID_Limit_Modifier_Limit__c.field-meta.xml
<CustomField>
    <fullName>FID_Limit_Modifier_Limit__c</fullName>
    <defaultValue>&quot;$1,000,000&quot;</defaultValue>
    <label>FID Limit Modifier (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
            </value>
            <value>
                <fullName>$2,000,000</fullName>
            </value>
            <value>
                <fullName>$3,000,000</fullName>
            </value>
            <value>
                <fullName>$4,000,000</fullName>
            </value>
            <value>
                <fullName>$5,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>