force-app/main/default/objects/Quote__c/fields/FID_Primary_Underlying_Quality_Factor__c.field-meta.xml
<CustomField>
    <fullName>FID_Primary_Underlying_Quality_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>FID Primary/Underlying Quality (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>