force-app/main/default/objects/Quote__c/fields/FID_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>FID_Rated_Premium__c</fullName>
    <label>FID Rated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>