force-app/main/default/objects/Quote__c/fields/FID_Rating_Factors__c.field-meta.xml
<CustomField>
    <fullName>FID_Rating_Factors__c</fullName>
    <formula>((Type_of_Plans_Factor__c + Years_in_Business_Factor__c + Number_of_participants_Factor__c + M_A_Activity_FID_Factor__c + Industry_Factor__c + Company_Performance_Factor__c + Plan_Compliance_Factor__c + Benefit_Reduc_Plan_Termin_Factor__c + Plan_funding_Factor__c + Plan_manager_quality_Factor__c + Prior_FID_Claim_Activity_Factor__c + FID_Voluntary_compliance_Factor__c)/12)</formula>
    <label>FID Rating Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>