force-app/main/default/objects/Quote__c/fields/FID_Retention_Modifier_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>FID_Retention_Modifier_Adj_New__c</fullName>
    <label>FID Retention Modifier (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>