force-app/main/default/objects/Quote__c/fields/FID_Retention_Modifier_Retention__c.field-meta.xml
<CustomField>
    <fullName>FID_Retention_Modifier_Retention__c</fullName>
    <defaultValue>&quot;$10,000&quot;</defaultValue>
    <label>FID Retention Modifier (Retention)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000</fullName>
            </value>
            <value>
                <fullName>$7,500</fullName>
            </value>
            <value>
                <fullName>$10,000</fullName>
            </value>
            <value>
                <fullName>$15,000</fullName>
            </value>
            <value>
                <fullName>$20,000</fullName>
            </value>
            <value>
                <fullName>$25,000</fullName>
            </value>
            <value>
                <fullName>$35,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$75,000</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
            </value>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>