force-app/main/default/objects/Quote__c/fields/FID_Risk_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>FID_Risk_Adjusted_Rate__c</fullName>
    <label>FID Risk Adjusted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>