force-app/main/default/objects/Quote__c/fields/FID_Supplemental_Coverage_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>FID_Supplemental_Coverage_Adjusted_Rate__c</fullName>
    <label>FID Supplemental Coverage Adj Rate (Sep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>